# agents-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_RESULT.txt  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  server.py
agents_gateway/: __init__.py  __main__.py  auth.py  catalog.py  cli.py  config.py  harness_runtime_adapter.py  logging.py  manifest.py  mcp_tools.py  metrics.py  runtime.py  server.py  skills_validation.py  storage.py  worker.py
docs/: AGENTS.md  AGENTS_GATEWAY_STANDARD.md  AUTH.md  CONFIG.md  CURRENT_STATE.md  DEPLOYMENT.md  E2E_REPORT.md  GATEWAY_PLATFORM_STANDARD.md  OBSERVABILITY.md  PROFILES.md  RUNTIME.md  SECURITY.md  TASKS.md  TESTING.md  TROUBLESHOOTING.md  agent-worklog.md  api.md  architecture.md  baseline-audit.md  composer-integration.md  harness-runtime.md  runbooks.md  runtime.md  verification.md
gateway/: .env.example  Dockerfile  agents.yaml  server.py
scripts/: cleanup-harness-artifacts.sh  e2e-harness-runtime-local.sh  e2e-harness-runtime-opencode.sh  e2e-harness-runtime-real.sh  smoke-test.sh
tests/: test_agents_mcp_tools.py  test_auth.py  test_catalog.py  test_classifier.py  test_cleanup.py  test_cli.py  test_config.py  test_endpoints.py  test_goal_injection.py  test_harness_http_api.py  test_harness_http_phase3.py  test_harness_mcp_client.py  test_harness_profiles.py  test_harness_runtime_adapter.py  test_harness_runtime_e2e.py  test_harness_session.py  test_harness_skills_client.py  test_logging.py  test_manifest.py  test_mcp_harness_tools.py  (+12 more)
(+39 files in other folders)
