[project]
name = "agents-gateway"
version = "0.1.0"
description = "Production-grade agent gateway with CLI, MCP tools, task lifecycle, and observability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "typer>=0.12,<1",
    "pydantic>=2.0,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "httpx>=0.27,<1",
    "pyjwt>=2.8,<3",
    "cryptography>=41.0,<44",
    "python-multipart>=0.0.9,<1",
]

[project.scripts]
agents-gateway = "agents_gateway.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "respx>=0.23.1",
]
